    Placed black man chamber at #15 above Renewal and below spam challenge 1

February 1, 2026: Version 2.0.2 - List Placements
    Placed NullU at #20 below zimbabwe and above TOOMDUDUFOIGDPCLBM
    Moved le funky ufo lvl to #19 (from #22) pushing NullU uot of the top 20
    Placed AntiAntigravity at #13 above mycat sigma boy chal and below vsc but ufo

February 2, 2026: Version 2.0.3 - List Placement (woah new top 1)
    Placed GODHANDUFO at #1 pushing BlUDUFObath out of the top 5 and agony out of the top 10

February 6, 2026: Version 3.0.0 - Level Pages & Dynamic Content
    Added subpages for each level with a video, leaderboard, and other info
    Level cards on the home page now are dynamically displayed based off listData.js (had to do manually before)
    Added scale animation when hover over level on home page
    Fastest time on level card now displays based on #1 fastest time
    Placed WIGGLECORE at #19 below Renewal and above UFO Funk
    Placed big yahu challenge x at #17 above black man chamber and below spam challenge 1
    Placed DOG MUNCHER CORRIDOR at #19 above Renewal and below black man chamber

February 7, 2026: Version 3.0.1 - List placements & more
    Placed SuperMPREGixyWorld at #27 above TOOMDUDUFOIGDPCLBM and below NullU
    Placed 200mg Ufombien at #22 above average udufopcl level and below WIGGLECORE
    Future UFO lowered to #25 above zimbabwe and below le funky ufo level
    Added Astatine16 lament completion

February 9, 2026: Version 3.1.0 - Level Tags, Badges, and Cake!
    Added 1 year anniversary of UDUFOPCL celebration
    New font: Poppins
    Added level tags
    Added ability to add level badges
    Added level ID on level page
    Added discord link under leaderboard
    Placed nonbinaryU at #17 above THE Challenge X and below spam challenge 1
    Placed jimbabwe 31 jaleng at #29 above SuperAwesomeIxyWorld and below NullU

To do:
    Rules/About Page
    Upcoming levels
    Open verifications
    Skillsets (kinda done)