@@ -83,8 +83,8 @@ const data = {
         ID : 131366052,
         creator : 'Astatine16',
         verifier : 'Astatine16',
-        badge : './no_ufo.webp',
-        badgeInfo : 'No badge',
+        badge : './bronze_ufo.webp',
+        badgeInfo : 'Great design',
         tags : ['precise', 'gimmick', 'top1'],
         times : {
             1 : {
@@ -125,7 +125,7 @@ const data = {
         verifier : 'ItsNoobe',
         badge : './no_ufo.webp',
         badgeInfo : 'No badge',
-        tags : ['spam', 'memory', 'gimmick', 'anti', 'timed'],
+        tags : ['spam', 'memory', 'gimmick', 'anti', 'timed', 'ass'],
         times : {
             1 : {
                 name : 'Astatine16',
@@ -181,8 +181,8 @@ const data = {
         ID : 114965788,
         creator : 'rush',
         verifier : 'rush',
-        badge : './no_ufo.webp',
-        badgeInfo : 'No badge',
+        badge : './bronze_ufo.webp',
+        badgeInfo : 'Great design',
         tags : ['precise', 'top1',],
         times : {
             1 : {
@@ -194,6 +194,26 @@ const data = {
         },
     },
     7 : {
+        name : 'spectralabyrinth',
+        image : './Images/spectralab.webp',
+        video : 'https://www.youtube.com/embed/b8Ms5OxYNhA?start=319',
+        description : 'launchpad ufobyrinth sequel from a couple of months ago // i was never book smart im money smart... makes me more intellegent',
+        ID : 133194437,
+        creator : 'ItsNoobe',
+        verifier : 'ItsNoobe',
+        badge : './no_ufo.webp',
+        badgeInfo : 'No badge',
+        tags : ['precise', 'gimmick'],
+        times : {
+            1 : {
+                name : 'ItsNoobe',
+                time : '4.550',
+                video : 'https://www.youtube.com/watch?v=b8Ms5OxYNhA&t=319s',
+                linkText : 'YouTube',
+            },
+        },
+    },
+    8 : {
         name : 'run from emoji9',
         image : './Images/runFromEmoji9.webp',
         video : 'https://www.youtube.com/embed/LlVNJfhROOI?start=579',
@@ -213,7 +233,7 @@ const data = {
             },
         },
     },
-    8 : {
+    9 : {
         name : 'launchpad ufobyrinth',
         image : './Images/launchpad.webp',
         video : 'https://www.youtube.com/embed/ghrn4ZxM8DI',
@@ -233,7 +253,7 @@ const data = {
             },
         },
     },
-    9 : {
+    10 : {
         name : 'Fever',
         image : './Images/fever.webp',
         video : 'https://medal.tv/games/geometry-dash/clip/jF91etS4R2m1olOgZ?invite=cr-MSxLMmssNTM4NjMyNTM5',
@@ -259,7 +279,7 @@ const data = {
             }
         },
     },
-    10 : {
+    11 : {
         name : 'Suffer',
         image : './Images/suffer.webp',
         video : 'https://www.youtube.com/embed/dQw4w9WgXcQ',
@@ -279,7 +299,7 @@ const data = {
             },
         },
     },
-    11 : {
+    12 : {
         name : 'agony',
         image : './Images/agony.webp',
         video : 'https://medal.tv/games/geometry-dash/clip/jERuUdrH6uF8t9zd5?invite=cr-MSxUM3csNTM4NjMyNTM5',
@@ -305,7 +325,7 @@ const data = {
             },
         },
     },
-    12 : {
+    13 : {
         name : 'mangoa',
         image : './Images/mangoa.webp',
         video : 'https://medal.tv/games/geometry-dash/clip/jEMsXCGKH26TVB45a?invite=cr-MSxCbHEsNTM4NjMyNTM5',
@@ -335,9 +355,15 @@ const data = {
                 video : '',
                 linkText : '',
             },
+            4 : {
+                name : 'ItsNoobe',
+                time : '19.574',
+                video : '',
+                linkText : '',
+            }
         },
     },
-    13 : {
+    14 : {
         name : 'VSC but ufo',
         image : './Images/vscUfo.webp',
         video : 'https://www.youtube.com/embed/dQw4w9WgXcQ',
@@ -357,7 +383,7 @@ const data = {
             },
         },
     },
-    14 : {
+    15 : {
         name : 'AntiAntigravity',
         image : './Images/antiAntigravity.webp',
         video : 'https://www.youtube.com/embed/YbgwCut3BFc',
@@ -377,7 +403,7 @@ const data = {
             },
         },
     },
-    15 : {
+    16 : {
         name : 'Mycat sigma boy chal',
         image : './Images/sigmaBoy.webp',
         video : 'https://www.youtube.com/embed/dQw4w9WgXcQ',
@@ -397,7 +423,7 @@ const data = {
             },
         },
     },
-    16 : {
+    17 : {
         name : 'spam challenge 1',
         image : './Images/spam1.webp',
         video : 'https://www.youtube.com/embed/dQw4w9WgXcQ',
@@ -417,7 +443,7 @@ const data = {
             },
         },
     },
-    17 : {
+    18 : {
         name : 'nonbinaryU',
         image : './Images/nonBU.webp',
         video : 'https://www.youtube.com/embed/N8AVeM0rsRU',
@@ -437,7 +463,7 @@ const data = {
             },
         },
     },
-    18 : {
+    19 : {
         name : 'big yahu challenge x',
         image : './Images/bigYahuChallengeX.webp',
         video : 'https://www.youtube.com/embed/24Eku28-iUY?start=152',
@@ -447,7 +473,7 @@ const data = {
         verifier : 'ItsNoobe',
         badge : './no_ufo.webp',
         badgeInfo : 'No badge',
-        tags : ['spam', 'anti'],
+        tags : ['spam'],
         times : {
             1 : {
                 name : 'ItsNoobe',
@@ -457,7 +483,7 @@ const data = {
             },
         },
     },
-    19 : {
+    20 : {
         name : 'black man chamber',
         image : './Images/blackMan.webp',
         video : 'https://www.youtube.com/embed/3cAfx9pYWqg?start=808',
@@ -477,7 +503,7 @@ const data = {
             },
         },
     },
-    20 : {
+    21 : {
         name : 'DOG MUNCHER CORRIDOR',
         image : './Images/dogMuncher.webp',
         video : 'https://www.youtube.com/embed/gdfQWECvAcA?start=65',
@@ -497,7 +523,7 @@ const data = {
             },
         },
     },
-    21 : {
+    22 : {
         name : 'RENEWAL',
         image : './Images/renewal.webp',
         video : 'https://www.youtube.com/embed/lpNPcDd4SX4?start=82',
@@ -517,7 +543,7 @@ const data = {
             },
         },
     },
-    22 : {
+    23 : {
         name : 'WIGGLECORE',
         image : './Images/wigglecore.webp',
         video : 'https://www.youtube.com/embed/wrqW7YVjQZM',
@@ -537,7 +563,7 @@ const data = {
             },
         },
     },
-    23 : {
+    24 : {
         name : '200mg Ufombien',
         image : './Images/200mgUFO.webp',
         video : 'https://www.youtube.com/embed/Fq508rkQCns',
@@ -557,7 +583,7 @@ const data = {
             },
         },
     },
-    24 : {
+    25 : {
         name : 'average udufopcl level',
         image : './Images/average.webp',
         video : 'https://www.youtube.com/embed/TMx-I8BQ094',
@@ -589,7 +615,7 @@ const data = {
             },
         },
     },
-    25 : {
+    26 : {
         name : 'le funky ufo level',
         image : './Images/leFunky.webp',
         video : 'https://www.youtube.com/embed/Duu-QcPfEes?start=134',
@@ -615,7 +641,7 @@ const data = {
             },
         },
     },
-    26 : {
+    27 : {
         name : 'UFO Funk',
         image : './Images/ufoFunk.webp',
         video : 'https://www.youtube.com/embed/MLCBuyU3SfU',
@@ -635,7 +661,7 @@ const data = {
             },
         },
     },
-    27 : {
+    28 : {
         name : 'zimbabwe',
         image : './Images/zimbabwe.webp',
         video : 'https://www.youtube.com/embed/DAkbOoqpn44',
@@ -655,7 +681,7 @@ const data = {
             },
         },
     },
-    28 : {
+    29 : {
         name : 'NullU',
         image : './Images/nullU.webp',
         video : 'https://www.youtube.com/embed/EfetjK-ymII',
@@ -681,7 +707,7 @@ const data = {
             },
         },
     },
-    29 : {
+    30 : {
         name : 'jimbabwe 31 jaleng',
         image : './Images/jim31j.webp',
         video : 'https://www.youtube.com/embed/Bz0GaHFHosc',
@@ -691,7 +717,7 @@ const data = {
         verifier : 'ItsNoobe',
         badge : './no_ufo.webp',
         badgeInfo : 'No badge',
-        tags : ['spam', 'precise'],
+        tags : ['spam', 'precise', 'ass'],
         times : {
             1 : {
                 name : 'ItsNoobe',
@@ -701,7 +727,7 @@ const data = {
             },
         },
     },
-    30 : {
+    31 : {
         name : 'SuperMPREGixyWorld',
         image : './Images/superAwesome.webp',
         video : 'https://www.youtube.com/embed/dQw4w9WgXcQ',
@@ -721,7 +747,7 @@ const data = {
             },
         },
     },
-    31 : {
+    32 : {
         name : 'TOOMDUDUFOIGDPCLBM',
         image : './Images/toomdud.webp',
         video : 'https://www.youtube.com/embed/k0GOhRqADJM',
