@@ -66,6 +66,15 @@ February 9, 2026: Version 3.1.0 - Level Tags, Badges, and Cake!
     Placed nonbinaryU at #17 above THE Challenge X and below spam challenge 1
     Placed jimbabwe 31 jaleng at #29 above SuperAwesomeIxyWorld and below NullU
 
+February 10, 2026: Version 3.1.1 - List placement + other stuff idk
+    Placed spectralabyrinth #7 above run from emoji9 and below blUDUFObath. This pushes le funky ufo level out of the top 25 (again??)
+    Note: there is no fucking way ts is top 7 :sob:
+    Awarded the first ever level badges!
+    Awarded BlUDUFObath with a BRONZE ufo badge for great design
+    Awarded FALLEN ANGEL with a BRONZE ufo badge for great design
+    Updated some level tags
+    Added ItsNoobe mangoa completion
+
 To do:
     Rules/About Page
     Upcoming levels
